raw binary support
Modified Files:
	ChangeLog samples/gui/Makefile src/lib/monapi/messages.cpp
	src/servers/Makefile src/servers/1linesh/OneLineShell.cpp
	src/servers/elf/main.cpp src/servers/gui/Makefile
	src/servers/gui/STARTGUI.MSH
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp
Added Files:
	apps/non-gui/ata/.cvsignore src/servers/moniter/.cvsignore

--- a/Mona/samples/gui/Makefile
+++ b/Mona/samples/gui/Makefile
@@ -1,29 +1,29 @@
 all:
-	@cd button; $(MAKE) $@
-	@cd label; $(MAKE) $@
+#	@cd button; $(MAKE) $@
+#	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
 install:
-	@cd button; $(MAKE) $@
-	@cd label; $(MAKE) $@
+#	@cd button; $(MAKE) $@
+#	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
 clean: touchdepend
-	@cd button; $(MAKE) $@
-	@cd label; $(MAKE) $@
+#	@cd button; $(MAKE) $@
+#	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
 depend: touchdepend
-	@cd button; $(MAKE) $@
-	@cd label; $(MAKE) $@
+#	@cd button; $(MAKE) $@
+#	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
 distclean:
-	rm -f button/dependencies
-	rm -f label/dependencies
+#	rm -f button/dependencies
+#	rm -f label/dependencies
 	rm -f bitmap/dependencies
 
 touchdepend:
-	touch button/dependencies
-	touch label/dependencies
+#	touch button/dependencies
+#	touch label/dependencies
 	touch bitmap/dependencies
