--- a/Mona/src/servers/gui/Makefile
+++ b/Mona/src/servers/gui/Makefile
@@ -1,34 +1,15 @@
-TARGET  = GUI.ELF
+TARGET  = GUI.BIN
 SOURCES = main.cpp image.cpp screen.cpp utils.cpp window.cpp effect.cpp Rectangle.cpp Overlap.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi.inc
+include $(MONADIR)/env/monapi-bin.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 LINK    = -lmonapi -lmonalibc -ljpegls
 
-all: $(TARGET)
-
-$(TARGET): $(OBJECTS) $(LIBMONAPI) $(LIBDIR)/libmonalibc.a $(LIBDIR)/libjpegls.a
-	$(LD) $(LFLAGS) $(LIBDIR)/monapi.o $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
-	objcopy $(OFLAGS) $@
-	$(STRIP) $@
-	$(BINDIR)/monaelf $@
-
-install: all
-	mkdir -p $(INSTDIR)
-	$(INSTALL) $(TARGET) $(INSTFILES) $(INSTDIR)
+install-startgui:
 	$(INSTALL) STARTGUI.MSH $(MONADIR)/bin/root/APPS
 
-clean:
-	rm -f $(OBJECTS) $(TARGET)
-
-depend:
-	rm -f dependencies
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) >> dependencies
-
-.SUFFIXES: .cpp .o
-.cpp.o:
-	$(CXX) -c -o $@ $(CXXFLAGS) $(INCLUDE) $<
+install: install-startgui
 
 include dependencies
