fix for ld's warning
Modified Files:
	ChangeLog src/lib/monapi/Makefile src/lib/monapi/monapi.cpp

--- a/Mona/src/lib/monapi/Makefile
+++ b/Mona/src/lib/monapi/Makefile
@@ -31,7 +31,7 @@ OBJECTS = $(SOURCES:.cpp=.o)
 
 all : $(TARGET1) $(TARGET2)
 
-$(TARGET1):
+$(TARGET1): monapi.cpp
 	$(CXX) -o $@ -c $(CXXFLAGS) $(INCLUDE) monapi.cpp
 
 $(TARGET2) : $(OBJECTS)
