separate process server from elf server
Modified Files:
	ChangeLog apps/gui/Makefile apps/gui/launcher/Form1.cpp
	apps/gui/monafile/FileManager.cpp bin/root/MONA.CFG
	include/monapi/messages.h src/lib/monapi/messages.cpp
	src/lib/monapi/syscall.cpp src/servers/Makefile
	src/servers/1linesh/Command.cpp
	src/servers/1linesh/OneLineShell.cpp src/servers/elf/Makefile
	src/servers/elf/main.cpp src/servers/gui/main.cpp
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp
Added Files:
	src/servers/pe/.cvsignore src/servers/pe/Makefile
	src/servers/pe/PEServer.h src/servers/pe/main.cpp
	src/servers/process/.cvsignore src/servers/process/Makefile
	src/servers/process/ProcessInfo.cpp
	src/servers/process/ProcessInfo.h
	src/servers/process/ProcessManager.cpp
	src/servers/process/ProcessManager.h
	src/servers/process/ProcessServer.h
	src/servers/process/main.cpp
Removed Files:
	src/servers/elf/ProcessInfo.cpp src/servers/elf/ProcessInfo.h
	src/servers/elf/ProcessManager.cpp
	src/servers/elf/ProcessManager.h

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -5,9 +5,9 @@ VESA_RESOLUTION=800
 VESA_BPP=16
 
 SERVER=/SERVERS/FILE.BIN
+SERVER=/SERVERS/PROCESS.BIN
 SERVER=/SERVERS/ELF.BIN
 SERVER=/SERVERS/KEYBDMNG.BIN
 SERVER=/SERVERS/MOUSE.BIN
-#SERVER=/SERVERS/MONITER.BIN
+#SERVER=/SERVERS/MONITOR.BIN
 SERVER=/SERVERS/OLDSHELL.BIN
-
