--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -7,7 +7,9 @@ all:
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
 	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
+#	@cd moniter; $(MAKE) $@
+	@cd process; $(MAKE) $@
+	@cd pe; $(MAKE) $@
 
 install:
 	@cd key; $(MAKE) $@
@@ -18,7 +20,9 @@ install:
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
 	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
+#	@cd moniter; $(MAKE) $@
+	@cd process; $(MAKE) $@
+	@cd pe; $(MAKE) $@
 
 clean: touchdepend
 	@cd key; $(MAKE) $@
@@ -29,7 +33,9 @@ clean: touchdepend
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
 	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
+#	@cd moniter; $(MAKE) $@
+	@cd process; $(MAKE) $@
+	@cd pe; $(MAKE) $@
 
 depend: touchdepend
 	@cd key; $(MAKE) $@
@@ -39,7 +45,9 @@ depend: touchdepend
 	@cd 1linesh; $(MAKE) $@
 	@cd file; $(MAKE) $@
 	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
+#	@cd moniter; $(MAKE) $@
+	@cd process; $(MAKE) $@
+	@cd pe; $(MAKE) $@
 
 distclean:
 	rm -f key/dependencies
@@ -49,7 +57,9 @@ distclean:
 	rm -f 1linesh/dependencies
 	rm -f file/dependencies
 	rm -f elf/dependencies
-	rm -f moniter/dependencies
+#	rm -f moniter/dependencies
+	rm -f process/dependencies
+	rm -f pe/dependencies
 
 touchdepend:
 	touch key/dependencies
@@ -59,4 +69,6 @@ touchdepend:
 	touch 1linesh/dependencies
 	touch file/dependencies
 	touch elf/dependencies
-	touch moniter/dependencies
+#	touch moniter/dependencies
+	touch process/dependencies
+	touch pe/dependencies
