MONITER.BIN load *.BN2

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -6,8 +6,5 @@ VESA_BPP=16
 
 SERVER=/SERVERS/FILE.BIN
 SERVER=/SERVERS/PROCESS.BIN
-SERVER=/SERVERS/ELF.BIN
-SERVER=/SERVERS/KEYBDMNG.BIN
-SERVER=/SERVERS/MOUSE.BIN
-#SERVER=/SERVERS/MONITOR.BIN
-SERVER=/SERVERS/OLDSHELL.BIN
+SERVER=/SERVERS/MONITOR.BIN
+
