--- a/Mona/src/servers/elf/Makefile
+++ b/Mona/src/servers/elf/Makefile
@@ -1,8 +1,8 @@
-TARGET  = ELF.BIN
+TARGET  = ELF
 SOURCES = main.cpp elfparser.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi-bin.inc
+include $(MONADIR)/env/monapi-bn2.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 
