--- a/Mona/src/servers/mouse/Makefile
+++ b/Mona/src/servers/mouse/Makefile
@@ -1,8 +1,8 @@
-TARGET  = MOUSE.BIN
+TARGET  = MOUSE
 SOURCES = main.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi-bin.inc
+include $(MONADIR)/env/monapi-bn2.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 
