--- a/Mona/bin/root/MONITOR.INI
+++ b/Mona/bin/root/MONITOR.INI
@@ -1,5 +1,6 @@
-# auto load servers list for MONITER.BIN
+# auto load servers list for MONITOR.BIN
 SERVER=/SERVERS/ELF.BN2
+SERVER=/SERVERS/PE.BN2
 SERVER=/SERVERS/KEYBDMNG.BN2
 SERVER=/SERVERS/MOUSE.BN2
 SERVER=/SERVERS/OLDSHELL.BN2
