Modified Files: 	src/servers/1linesh/Makefile 	src/servers/1linesh/OneLineShell.cpp 	src/servers/shell/InternalCommands.cpp

--- a/Mona/src/servers/1linesh/Makefile
+++ b/Mona/src/servers/1linesh/Makefile
@@ -1,4 +1,4 @@
-TARGET  = 1LINESH.BIN
+TARGET = 1LINESH
 SOURCES         = main.cpp          \
                   OneLineShell.cpp  \
                   Command.cpp       \
@@ -6,7 +6,7 @@ SOURCES         = main.cpp          \
                   CommandHistory.cpp
 
 MONADIR = ../../..
-include $(MONADIR)/env/monapi-bin.inc
+include $(MONADIR)/env/monapi-bn2.inc
 
 INSTDIR = $(BINDIR)/root/SERVERS
 
