--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -1,19 +1,20 @@
 TARGET = mona.img
 
 ROOT_FILES = `cd root; ls *.*`
-SVR_FILES  = `cd root; ls SERVERS/*.BN2`
-BIN_FILES  = `cd root; ls SERVERS/*.BIN`
+SVR_FILES  = `cd root; ls SERVERS/*.*`
 APP_FILES  = `cd root; ls APPS/*.EL* APPS/*.LIB APPS/*.WRP APPS/*.MSH`
+LIB_FILES  = `cd root; ls LIBS/*.*`
 
 all:
 	cp fat_template.img $(TARGET)
 	./fat_write $(TARGET) --mbr firstboot.bin
 	./fat_write $(TARGET) --mkdir SERVERS
 	./fat_write $(TARGET) --mkdir APPS
-	@for file in $(ROOT_FILES); do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
-	@for file in $(SVR_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
-	@for file in $(BIN_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
-	@for file in $(APP_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
+	./fat_write $(TARGET) --mkdir LIBS
+	@for file in $(ROOT_FILES) $(SVR_FILES) $(APP_FILES) $(LIB_FILES); \
+	do \
+	  echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; \
+	done
 	@cd root; for dir in APPS/*.APP; \
 	do \
 	  echo "Creating: "$$dir"..."; ../fat_write ../$(TARGET) --mkdir $$dir; \
@@ -30,3 +31,4 @@ clean:
 	rm -f root/MONA-12.M*
 	rm -rf root/APPS/*.*
 	rm -rf root/SERVERS/*.*
+	rm -rf root/LIBS
