--- a/Mona/src/kernel/Makefile
+++ b/Mona/src/kernel/Makefile
@@ -43,6 +43,7 @@ SOURCES      = cstart.cpp            \
                IDManager.cpp         \
                KObject.cpp           \
                Loader.cpp            \
+               Scheduler.cpp         \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
