--- a/Mona/bin/root/MONITOR.CFG
+++ b/Mona/bin/root/MONITOR.CFG
@@ -1,6 +1,7 @@
 # auto load servers list for MONITOR.BIN
 SERVER=/SERVERS/ELF.BN2
 SERVER=/SERVERS/PE.BN2
+# SERVER=/SERVERS/MONES.EX2
 SERVER=/SERVERS/KEYBDMNG.EX2
 SERVER=/SERVERS/MOUSE.EX2
 SERVER=/SERVERS/OLDSHELL.EX2
