2004/09/20 Yamami Code Mones Ver0.12

--- a/Mona/src/servers/mones/Makefile
+++ b/Mona/src/servers/mones/Makefile
@@ -4,12 +4,17 @@ SOURCES = mones.cpp            \
           Ne2000MoNic.cpp      \
           MoEther.cpp          \
           MoArp.cpp            \
+          MoIp.cpp             \
+          MoIcmp.cpp           \
           MonesConfig.cpp      \
           MoPacUtl.cpp
 
 INSTDIR = $(BINDIR)/root/SERVERS
 
 MONADIR = ../../..
+ADDLINK    = -lmonalibc
+ADDLINKDEP = $(MONADIR)/lib/libmonalibc.a
+
 ifneq ($(BUILD_TARGET),ELF)
 include $(MONADIR)/env/monapi-ex2.inc
 else
