--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -5,6 +5,7 @@ all:
 	@cd noiz2bg; $(MAKE) $@
 	@cd fire; $(MAKE) $@
 #	@cd launcher; $(MAKE) $@
+	@cd waba; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd clock; $(MAKE) $@
 	@cd cube; $(MAKE) $@
@@ -20,6 +21,7 @@ install:
 	@cd noiz2bg; $(MAKE) $@
 	@cd fire; $(MAKE) $@
 #	@cd launcher; $(MAKE) $@
+	@cd waba; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd clock; $(MAKE) $@
 	@cd cube; $(MAKE) $@
@@ -35,6 +37,7 @@ clean: touchdepend
 	@cd noiz2bg; $(MAKE) $@
 	@cd fire; $(MAKE) $@
 #	@cd launcher; $(MAKE) $@
+	@cd waba; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd clock; $(MAKE) $@
 	@cd cube; $(MAKE) $@
@@ -50,6 +53,7 @@ depend: touchdepend
 	@cd noiz2bg; $(MAKE) $@
 	@cd fire; $(MAKE) $@
 #	@cd launcher; $(MAKE) $@
+	@cd waba; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd clock; $(MAKE) $@
 	@cd cube; $(MAKE) $@
@@ -65,6 +69,7 @@ distclean:
 	rm -f noiz2bg/dependencies
 	rm -f fire/dependencies
 #	rm -f launcher/dependencies
+	rm -f waba/dependencies
 	rm -f shell/dependencies
 	rm -f clock/dependencies
 	rm -f cube/dependencies
@@ -80,6 +85,7 @@ touchdepend:
 	touch noiz2bg/dependencies
 	touch fire/dependencies
 #	touch launcher/dependencies
+	touch waba/dependencies
 	touch shell/dependencies
 	touch clock/dependencies
 	touch cube/dependencies
