--- a/Mona/src/lib/Makefile
+++ b/Mona/src/lib/Makefile
@@ -4,6 +4,7 @@ all:
 	@cd gui; $(MAKE) $@
 	@cd jpegls; $(MAKE) $@
 	@cd bzip2; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 install:
 	@cd monapi; $(MAKE) $@
@@ -11,6 +12,7 @@ install:
 	@cd gui; $(MAKE) $@
 	@cd jpegls; $(MAKE) $@
 	@cd bzip2; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 clean: touchdepend
 	@cd monapi; $(MAKE) $@
@@ -18,6 +20,7 @@ clean: touchdepend
 	@cd gui; $(MAKE) $@
 	@cd jpegls; $(MAKE) $@
 	@cd bzip2; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 	rm -f ../../lib/*.a
 
 depend: touchdepend
@@ -26,6 +29,7 @@ depend: touchdepend
 	@cd gui; $(MAKE) $@
 	@cd jpegls; $(MAKE) $@
 	@cd bzip2; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 distclean:
 	rm -f monapi/dependencies
@@ -33,6 +37,7 @@ distclean:
 	rm -f gui/dependencies
 	rm -f jpegls/dependencies
 	rm -f bzip2/dependencies
+	rm -f baygui/dependencies
 
 touchdepend:
 	touch monapi/dependencies
@@ -40,3 +45,4 @@ touchdepend:
 	touch gui/dependencies
 	touch jpegls/dependencies
 	touch bzip2/dependencies
+	touch baygui/dependencies
