--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -11,6 +11,7 @@ all:
 	@cd process; $(MAKE) $@
 	@cd pe; $(MAKE) $@
 #	@cd mones; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 install:
 	@cd key; $(MAKE) $@
@@ -25,6 +26,7 @@ install:
 	@cd process; $(MAKE) $@
 	@cd pe; $(MAKE) $@
 #	@cd mones; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 clean: touchdepend
 	@cd key; $(MAKE) $@
@@ -39,6 +41,7 @@ clean: touchdepend
 	@cd process; $(MAKE) $@
 	@cd pe; $(MAKE) $@
 #	@cd mones; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 depend: touchdepend
 	@cd key; $(MAKE) $@
@@ -52,6 +55,7 @@ depend: touchdepend
 	@cd process; $(MAKE) $@
 	@cd pe; $(MAKE) $@
 #	@cd mones; $(MAKE) $@
+	@cd baygui; $(MAKE) $@
 
 distclean:
 	rm -f key/dependencies
@@ -65,6 +69,7 @@ distclean:
 	rm -f process/dependencies
 	rm -f pe/dependencies
 #	rm -f mones/dependencies
+	rm -f baygui/dependencies
 	
 touchdepend:
 	touch key/dependencies
@@ -78,3 +83,4 @@ touchdepend:
 	touch process/dependencies
 	touch pe/dependencies
 #	touch mones/dependencies
+	touch baygui/dependencies
