--- a/Mona/bin/root/MONITOR.CFG
+++ b/Mona/bin/root/MONITOR.CFG
@@ -5,3 +5,4 @@ SERVER=/SERVERS/PE.BN2
 SERVER=/SERVERS/KEYBDMNG.EX2
 SERVER=/SERVERS/MOUSE.EX2
 SERVER=/SERVERS/OLDSHELL.EX2
+# SERVER=/SERVERS/BAYGUI.EX2
