--- a/Mona/src/servers/baygui/Makefile
+++ b/Mona/src/servers/baygui/Makefile
@@ -2,7 +2,7 @@ TARGET  = BAYGUI
 SOURCES = WindowManager.cpp
 INSTDIR = $(BINDIR)/root/SERVERS
 INSTFILES  = MONAWALL.BM2
-CLEANFILES = $(INSTFILES)
+CLEANFILES = 
 
 MONADIR    = ../../..
 ifneq ($(BUILD_TARGET),ELF)
