--- a/Mona/apps/baygui/Makefile
+++ b/Mona/apps/baygui/Makefile
@@ -2,6 +2,7 @@ all:
 	@cd gbball; $(MAKE) $@
 	@cd gbrowser; $(MAKE) $@
 	@cd gclock; $(MAKE) $@
+	@cd glaunch; $(MAKE) $@
 	@cd ghebtn; $(MAKE) $@
 	@cd grunner; $(MAKE) $@
 	@cd guitest1; $(MAKE) $@
@@ -11,6 +12,7 @@ install:
 	@cd gbball; $(MAKE) $@
 	@cd gbrowser; $(MAKE) $@
 	@cd gclock; $(MAKE) $@
+	@cd glaunch; $(MAKE) $@
 	@cd ghebtn; $(MAKE) $@
 	@cd grunner; $(MAKE) $@
 	@cd guitest1; $(MAKE) $@
@@ -20,6 +22,7 @@ clean: touchdepend
 	@cd gbball; $(MAKE) $@
 	@cd gbrowser; $(MAKE) $@
 	@cd gclock; $(MAKE) $@
+	@cd glaunch; $(MAKE) $@
 	@cd ghebtn; $(MAKE) $@
 	@cd grunner; $(MAKE) $@
 	@cd guitest1; $(MAKE) $@
@@ -29,6 +32,7 @@ depend: touchdepend
 	@cd gbball; $(MAKE) $@
 	@cd gbrowser; $(MAKE) $@
 	@cd gclock; $(MAKE) $@
+	@cd glaunch; $(MAKE) $@
 	@cd ghebtn; $(MAKE) $@
 	@cd grunner; $(MAKE) $@
 	@cd guitest1; $(MAKE) $@
@@ -38,6 +42,7 @@ distclean:
 	rm -f gbball/dependencies
 	rm -f gbrowser/dependencies
 	rm -f gclock/dependencies
+	rm -f glaunch/dependencies
 	rm -f ghebtn/dependencies
 	rm -f grunner/dependencies
 	rm -f guitest1/dependencies
@@ -47,6 +52,7 @@ touchdepend:
 	touch gbball/dependencies
 	touch gbrowser/dependencies
 	touch gclock/dependencies
+	touch glaunch/dependencies
 	touch ghebtn/dependencies
 	touch grunner/dependencies
 	touch guitest1/dependencies
