--- a/Mona/src/servers/file/Makefile
+++ b/Mona/src/servers/file/Makefile
@@ -3,7 +3,7 @@ SOURCES = main.cpp file.cpp bzip2.cpp dtk5s.cpp
 INSTDIR = $(BINDIR)/root/SERVERS
 
 MONADIR    = ../../..
-ADDLINK    = -lbz2
+ADDLINK    = -lbz2 -lmonalibc
 ADDLINKDEP = $(MONADIR)/lib/libbz2.a
 include $(MONADIR)/env/monapi-bin.inc
 
