--- a/Mona/apps/non-gui/Makefile
+++ b/Mona/apps/non-gui/Makefile
@@ -1,45 +1,45 @@
 all:
-	@cd noiz2bg; $(MAKE) $@
-	@cd reversi; $(MAKE) $@
-	@cd jpegdemo; $(MAKE) $@
-	@cd nic; $(MAKE) $@
-	@cd tube; $(MAKE) $@
-	@cd bzcat; $(MAKE) $@
-	@cd monamona; $(MAKE) $@
-	@cd pciinfo; $(MAKE) $@
-	@cd ata; $(MAKE) $@
+	@cd noiz2bg && $(MAKE) $@
+	@cd reversi && $(MAKE) $@
+	@cd jpegdemo && $(MAKE) $@
+	@cd nic && $(MAKE) $@
+	@cd tube && $(MAKE) $@
+	@cd bzcat && $(MAKE) $@
+	@cd monamona && $(MAKE) $@
+	@cd pciinfo && $(MAKE) $@
+	@cd ata && $(MAKE) $@
 
 install:
-	@cd noiz2bg; $(MAKE) $@
-	@cd reversi; $(MAKE) $@
-	@cd jpegdemo; $(MAKE) $@
-	@cd nic; $(MAKE) $@
-	@cd tube; $(MAKE) $@
-	@cd bzcat; $(MAKE) $@
-	@cd monamona; $(MAKE) $@
-	@cd pciinfo; $(MAKE) $@
-	@cd ata; $(MAKE) $@
+	@cd noiz2bg && $(MAKE) $@
+	@cd reversi && $(MAKE) $@
+	@cd jpegdemo && $(MAKE) $@
+	@cd nic && $(MAKE) $@
+	@cd tube && $(MAKE) $@
+	@cd bzcat && $(MAKE) $@
+	@cd monamona && $(MAKE) $@
+	@cd pciinfo && $(MAKE) $@
+	@cd ata && $(MAKE) $@
 
 clean: touchdepend
-	@cd noiz2bg; $(MAKE) $@
-	@cd reversi; $(MAKE) $@
-	@cd jpegdemo; $(MAKE) $@
-	@cd nic; $(MAKE) $@
-	@cd tube; $(MAKE) $@
-	@cd bzcat; $(MAKE) $@
-	@cd monamona; $(MAKE) $@
-	@cd pciinfo; $(MAKE) $@
-	@cd ata; $(MAKE) $@
+	@cd noiz2bg && $(MAKE) $@
+	@cd reversi && $(MAKE) $@
+	@cd jpegdemo && $(MAKE) $@
+	@cd nic && $(MAKE) $@
+	@cd tube && $(MAKE) $@
+	@cd bzcat && $(MAKE) $@
+	@cd monamona && $(MAKE) $@
+	@cd pciinfo && $(MAKE) $@
+	@cd ata && $(MAKE) $@
 
 depend: touchdepend
-	@cd noiz2bg; $(MAKE) $@
-	@cd reversi; $(MAKE) $@
-	@cd jpegdemo; $(MAKE) $@
-	@cd nic; $(MAKE) $@
-	@cd bzcat; $(MAKE) $@
-	@cd monamona; $(MAKE) $@
-	@cd pciinfo; $(MAKE) $@
-	@cd ata; $(MAKE) $@
+	@cd noiz2bg && $(MAKE) $@
+	@cd reversi && $(MAKE) $@
+	@cd jpegdemo && $(MAKE) $@
+	@cd nic && $(MAKE) $@
+	@cd bzcat && $(MAKE) $@
+	@cd monamona && $(MAKE) $@
+	@cd pciinfo && $(MAKE) $@
+	@cd ata && $(MAKE) $@
 
 distclean:
 	rm -f noiz2bg/dependencies
@@ -49,7 +49,7 @@ distclean:
 	rm -f monamona/dependencies
 	rm -f pciinfo/dependencies
 	rm -f ata/dependencies
-	@cd nic; $(MAKE) $@
+	@cd nic && $(MAKE) $@
 
 touchdepend:
 	touch noiz2bg/dependencies
