--- a/Mona/apps/non-gui/nic/Makefile
+++ b/Mona/apps/non-gui/nic/Makefile
@@ -1,14 +1,14 @@
 all:
-	@cd ne2k; $(MAKE) $@
+	@cd ne2k && $(MAKE) $@
 
 install:
-	@cd ne2k; $(MAKE) $@
+	@cd ne2k && $(MAKE) $@
 
 clean: touchdepend
-	@cd ne2k; $(MAKE) $@
+	@cd ne2k && $(MAKE) $@
 
 depend: touchdepend
-	@cd ne2k; $(MAKE) $@
+	@cd ne2k && $(MAKE) $@
 
 distclean:
 	rm -f ne2k/dependencies
