--- a/Mona/samples/gui/Makefile
+++ b/Mona/samples/gui/Makefile
@@ -1,22 +1,22 @@
 all:
-#	@cd button; $(MAKE) $@
-#	@cd label; $(MAKE) $@
-	@cd bitmap; $(MAKE) $@
+#	@cd button && $(MAKE) $@
+#	@cd label && $(MAKE) $@
+	@cd bitmap && $(MAKE) $@
 
 install:
-#	@cd button; $(MAKE) $@
-#	@cd label; $(MAKE) $@
-	@cd bitmap; $(MAKE) $@
+#	@cd button && $(MAKE) $@
+#	@cd label && $(MAKE) $@
+	@cd bitmap && $(MAKE) $@
 
 clean: touchdepend
-#	@cd button; $(MAKE) $@
-#	@cd label; $(MAKE) $@
-	@cd bitmap; $(MAKE) $@
+#	@cd button && $(MAKE) $@
+#	@cd label && $(MAKE) $@
+	@cd bitmap && $(MAKE) $@
 
 depend: touchdepend
-#	@cd button; $(MAKE) $@
-#	@cd label; $(MAKE) $@
-	@cd bitmap; $(MAKE) $@
+#	@cd button && $(MAKE) $@
+#	@cd label && $(MAKE) $@
+	@cd bitmap && $(MAKE) $@
 
 distclean:
 #	rm -f button/dependencies
