--- a/Mona/samples/non-gui/Makefile
+++ b/Mona/samples/non-gui/Makefile
@@ -1,22 +1,22 @@
 all:
-	@cd hello; $(MAKE) $@
-#	@cd kanji; $(MAKE) $@
-	@cd yamami; $(MAKE) $@
+	@cd hello && $(MAKE) $@
+#	@cd kanji && $(MAKE) $@
+	@cd yamami && $(MAKE) $@
 
 install:
-	@cd hello; $(MAKE) $@
-#	@cd kanji; $(MAKE) $@
-	@cd yamami; $(MAKE) $@
+	@cd hello && $(MAKE) $@
+#	@cd kanji && $(MAKE) $@
+	@cd yamami && $(MAKE) $@
 
 clean: touchdepend
-	@cd hello; $(MAKE) $@
-#	@cd kanji; $(MAKE) $@
-	@cd yamami; $(MAKE) $@
+	@cd hello && $(MAKE) $@
+#	@cd kanji && $(MAKE) $@
+	@cd yamami && $(MAKE) $@
 
 depend: touchdepend
-	@cd hello; $(MAKE) $@
-#	@cd kanji; $(MAKE) $@
-	@cd yamami; $(MAKE) $@
+	@cd hello && $(MAKE) $@
+#	@cd kanji && $(MAKE) $@
+	@cd yamami && $(MAKE) $@
 
 distclean:
 	rm -f hello/dependencies
