--- a/Mona/Makefile.in
+++ b/Mona/Makefile.in
@@ -1,38 +1,38 @@
 all:
-	@cd tools; $(MAKE) CXX=g++ CC=gcc $@
-	@cd src; $(MAKE) $@
-	@cd apps; $(MAKE) $@
-	@cd samples; $(MAKE) $@
+	@cd tools && $(MAKE) CXX=g++ CC=gcc $@
+	@cd src && $(MAKE) $@
+	@cd apps && $(MAKE) $@
+	@cd samples && $(MAKE) $@
 
 install:
-	@cd tools; $(MAKE) $@
-	@cd src; $(MAKE) $@
-	@cd apps; $(MAKE) $@
-	@cd samples; $(MAKE) $@
+	@cd tools && $(MAKE) $@
+	@cd src && $(MAKE) $@
+	@cd apps && $(MAKE) $@
+	@cd samples && $(MAKE) $@
 	bzip2 -c COPYRIGHT > bin/root/LICENSE.BZ2
-	@cd bin; $(MAKE)
+	@cd bin && $(MAKE)
 
 clean:
-	@cd tools; $(MAKE) $@
-	@cd src; $(MAKE) $@
-	@cd apps; $(MAKE) $@
-	@cd samples; $(MAKE) $@
+	@cd tools && $(MAKE) $@
+	@cd src && $(MAKE) $@
+	@cd apps && $(MAKE) $@
+	@cd samples && $(MAKE) $@
 	rm -f bin/root/LICENSE.BZ2
-	@cd bin; $(MAKE) $@
+	@cd bin && $(MAKE) $@
 
 depend:
-	@cd tools; $(MAKE) $@
-	@cd src; $(MAKE) $@
-	@cd apps; $(MAKE) $@
-	@cd samples; $(MAKE) $@
+	@cd tools && $(MAKE) $@
+	@cd src && $(MAKE) $@
+	@cd apps && $(MAKE) $@
+	@cd samples && $(MAKE) $@
 
 distclean: clean
-	@cd tools; $(MAKE) $@
-	@cd src; $(MAKE) $@
-	@cd apps; $(MAKE) $@
-	@cd samples; $(MAKE) $@
+	@cd tools && $(MAKE) $@
+	@cd src && $(MAKE) $@
+	@cd apps && $(MAKE) $@
+	@cd samples && $(MAKE) $@
 	rm -f Makefile
 	rm -f env/Makefile.inc
 
 write: install
-	@cd bin; $(MAKE) $@
+	@cd bin && $(MAKE) $@
