--- a/Mona/samples/Makefile
+++ b/Mona/samples/Makefile
@@ -1,19 +1,19 @@
 all:
-	@cd non-gui; $(MAKE) $@
-	@cd gui; $(MAKE) $@
+	@cd non-gui && $(MAKE) $@
+	@cd gui && $(MAKE) $@
 
 install:
-	@cd non-gui; $(MAKE) $@
-	@cd gui; $(MAKE) $@
+	@cd non-gui && $(MAKE) $@
+	@cd gui && $(MAKE) $@
 
 clean:
-	@cd non-gui; $(MAKE) $@
-	@cd gui; $(MAKE) $@
+	@cd non-gui && $(MAKE) $@
+	@cd gui && $(MAKE) $@
 
 depend:
-	@cd non-gui; $(MAKE) $@
-	@cd gui; $(MAKE) $@
+	@cd non-gui && $(MAKE) $@
+	@cd gui && $(MAKE) $@
 
 distclean:
-	@cd non-gui; $(MAKE) $@
-	@cd gui; $(MAKE) $@
+	@cd non-gui && $(MAKE) $@
+	@cd gui && $(MAKE) $@
