--- a/Mona/src/Makefile
+++ b/Mona/src/Makefile
@@ -1,27 +1,27 @@
 all:
-	@cd kernel; $(MAKE) $@
-	@cd lib; $(MAKE) $@
-	@cd servers; $(MAKE) $@
+	@cd kernel && $(MAKE) $@
+	@cd lib && $(MAKE) $@
+	@cd servers && $(MAKE) $@
 
 install:
-	@cd kernel; $(MAKE) $@
-	@cd lib; $(MAKE) $@
-	@cd servers; $(MAKE) $@
+	@cd kernel && $(MAKE) $@
+	@cd lib && $(MAKE) $@
+	@cd servers && $(MAKE) $@
 
 clean: touchdepend
-	@cd kernel; $(MAKE) $@
-	@cd lib; $(MAKE) $@
-	@cd servers; $(MAKE) $@
+	@cd kernel && $(MAKE) $@
+	@cd lib && $(MAKE) $@
+	@cd servers && $(MAKE) $@
 
 depend: touchdepend
-	@cd kernel; $(MAKE) $@
-	@cd lib; $(MAKE) $@
-	@cd servers; $(MAKE) $@
+	@cd kernel && $(MAKE) $@
+	@cd lib && $(MAKE) $@
+	@cd servers && $(MAKE) $@
 
 distclean:
 	rm -f kernel/dependencies
-	@cd lib; $(MAKE) $@
-	@cd servers; $(MAKE) $@
+	@cd lib && $(MAKE) $@
+	@cd servers && $(MAKE) $@
 
 touchdepend:
 	touch kernel/dependencies
