--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -1,61 +1,61 @@
 all:
-	@cd key; $(MAKE) $@
-	@cd mouse; $(MAKE) $@
-#	@cd shell; $(MAKE) $@
-	@cd shell; $(MAKE) -f Makefile.old $@
-	@cd gui; $(MAKE) $@
-	@cd 1linesh; $(MAKE) $@
-	@cd file; $(MAKE) $@
-	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
-	@cd process; $(MAKE) $@
-	@cd pe; $(MAKE) $@
-#	@cd mones; $(MAKE) $@
-	@cd baygui; $(MAKE) $@
+	@cd key && $(MAKE) $@
+	@cd mouse && $(MAKE) $@
+#	@cd shell && $(MAKE) $@
+	@cd shell && $(MAKE) -f Makefile.old $@
+	@cd gui && $(MAKE) $@
+	@cd 1linesh && $(MAKE) $@
+	@cd file && $(MAKE) $@
+	@cd elf && $(MAKE) $@
+	@cd moniter && $(MAKE) $@
+	@cd process && $(MAKE) $@
+	@cd pe && $(MAKE) $@
+#	@cd mones && $(MAKE) $@
+	@cd baygui && $(MAKE) $@
 
 install:
-	@cd key; $(MAKE) $@
-	@cd mouse; $(MAKE) $@
-#	@cd shell; $(MAKE) $@
-	@cd shell; $(MAKE) -f Makefile.old $@
-	@cd gui; $(MAKE) $@
-	@cd 1linesh; $(MAKE) $@
-	@cd file; $(MAKE) $@
-	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
-	@cd process; $(MAKE) $@
-	@cd pe; $(MAKE) $@
-#	@cd mones; $(MAKE) $@
-	@cd baygui; $(MAKE) $@
+	@cd key && $(MAKE) $@
+	@cd mouse && $(MAKE) $@
+#	@cd shell && $(MAKE) $@
+	@cd shell && $(MAKE) -f Makefile.old $@
+	@cd gui && $(MAKE) $@
+	@cd 1linesh && $(MAKE) $@
+	@cd file && $(MAKE) $@
+	@cd elf && $(MAKE) $@
+	@cd moniter && $(MAKE) $@
+	@cd process && $(MAKE) $@
+	@cd pe && $(MAKE) $@
+#	@cd mones && $(MAKE) $@
+	@cd baygui && $(MAKE) $@
 
 clean: touchdepend
-	@cd key; $(MAKE) $@
-	@cd mouse; $(MAKE) $@
-#	@cd shell; $(MAKE) $@
-	@cd shell; $(MAKE) -f Makefile.old $@
-	@cd gui; $(MAKE) $@
-	@cd 1linesh; $(MAKE) $@
-	@cd file; $(MAKE) $@
-	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
-	@cd process; $(MAKE) $@
-	@cd pe; $(MAKE) $@
-#	@cd mones; $(MAKE) $@
-	@cd baygui; $(MAKE) $@
+	@cd key && $(MAKE) $@
+	@cd mouse && $(MAKE) $@
+#	@cd shell && $(MAKE) $@
+	@cd shell && $(MAKE) -f Makefile.old $@
+	@cd gui && $(MAKE) $@
+	@cd 1linesh && $(MAKE) $@
+	@cd file && $(MAKE) $@
+	@cd elf && $(MAKE) $@
+	@cd moniter && $(MAKE) $@
+	@cd process && $(MAKE) $@
+	@cd pe && $(MAKE) $@
+#	@cd mones && $(MAKE) $@
+	@cd baygui && $(MAKE) $@
 
 depend: touchdepend
-	@cd key; $(MAKE) $@
-	@cd mouse; $(MAKE) $@
-	@cd shell; $(MAKE) -f Makefile.old $@
-	@cd gui; $(MAKE) $@
-	@cd 1linesh; $(MAKE) $@
-	@cd file; $(MAKE) $@
-	@cd elf; $(MAKE) $@
-	@cd moniter; $(MAKE) $@
-	@cd process; $(MAKE) $@
-	@cd pe; $(MAKE) $@
-#	@cd mones; $(MAKE) $@
-	@cd baygui; $(MAKE) $@
+	@cd key && $(MAKE) $@
+	@cd mouse && $(MAKE) $@
+	@cd shell && $(MAKE) -f Makefile.old $@
+	@cd gui && $(MAKE) $@
+	@cd 1linesh && $(MAKE) $@
+	@cd file && $(MAKE) $@
+	@cd elf && $(MAKE) $@
+	@cd moniter && $(MAKE) $@
+	@cd process && $(MAKE) $@
+	@cd pe && $(MAKE) $@
+#	@cd mones && $(MAKE) $@
+	@cd baygui && $(MAKE) $@
 
 distclean:
 	rm -f key/dependencies
@@ -70,7 +70,7 @@ distclean:
 	rm -f pe/dependencies
 #	rm -f mones/dependencies
 	rm -f baygui/dependencies
-	
+
 touchdepend:
 	touch key/dependencies
 	touch mouse/dependencies
