--- a/Mona/bin/root/APPS/.cvsignore
+++ b/Mona/bin/root/APPS/.cvsignore
@@ -1,16 +1,15 @@
 *.o
 *.bin
 *.list
-*.img
-*.exe
+*.map
+*.local
 *.BIN
 *.BN2
+*.BM2
 *.ELF
 *.EL2
 *.EXE
 *.EX2
-*.LIB
-*.WRP
-*.APP
-*.MSH
+*.EX5
 TAGS
+dependencies
