--- a/Mona/bin/root/.cvsignore
+++ b/Mona/bin/root/.cvsignore
@@ -1,4 +1,15 @@
-MONA-12.M*
-KERNEL.IMG
-LICENSE.BZ2
-LIBS
+*.o
+*.bin
+*.list
+*.map
+*.local
+*.BIN
+*.BN2
+*.BM2
+*.ELF
+*.EL2
+*.EXE
+*.EX2
+*.EX5
+TAGS
+dependencies
